highest medium average ever reached. closed notebook at +19, currently at +20

--- a/A3C-Pong.ipynb
+++ b/A3C-Pong.ipynb
@@ -1183,7 +1183,195 @@
       "Episode:    600 | MA50:  -19.9 | Episode Reward:  -18.0 | Steps:  2339 | Actions: [357. 284. 437. 448. 397. 416.]\n",
       "Saving model to Pong/, best episode score: -12.0\n",
       "Episode:    610 | MA50:  -19.7 | Episode Reward:  -12.0 | Steps:  2593 | Actions: [411. 299. 428. 447. 548. 460.]\n",
-      "Episode:    620 | MA50:  -19.6 | Episode Reward:  -16.0 | Steps:  1574 | Actions: [311. 180. 309. 240. 316. 218.]\n"
+      "Episode:    620 | MA50:  -19.6 | Episode Reward:  -16.0 | Steps:  1574 | Actions: [311. 180. 309. 240. 316. 218.]\n",
+      "Saving model to Pong/, best episode score: -7.0\n",
+      "Episode:    630 | MA50:  -19.4 | Episode Reward:   -7.0 | Steps:  2679 | Actions: [395. 286. 350. 565. 715. 368.]\n",
+      "Episode:    640 | MA50:  -19.1 | Episode Reward:   -9.0 | Steps:  2878 | Actions: [537. 268. 584. 622. 456. 411.]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode:    660 | MA50:  -18.5 | Episode Reward:   -9.0 | Steps:  2880 | Actions: [441. 373. 690. 479. 403. 494.]\n",
+      "Episode:    670 | MA50:  -18.2 | Episode Reward:   -7.0 | Steps:  3562 | Actions: [465. 534. 773. 818. 450. 522.]\n",
+      "Episode:    680 | MA50:  -18.0 | Episode Reward:   -9.0 | Steps:  2974 | Actions: [474. 390. 629. 619. 473. 389.]\n",
+      "Episode:    690 | MA50:  -18.0 | Episode Reward:  -20.0 | Steps:  1015 | Actions: [168. 313.  57. 241. 153.  83.]\n",
+      "Episode:    700 | MA50:  -17.7 | Episode Reward:   -6.0 | Steps:  2849 | Actions: [494. 580. 454. 538. 442. 341.]\n",
+      "Saving model to Pong/, best episode score: 13.0\n",
+      "Episode:    710 | MA50:  -17.0 | Episode Reward:   13.0 | Steps:  2675 | Actions: [395. 350. 483. 663. 457. 327.]\n",
+      "Saving model to Pong/, best episode score: 13.0\n",
+      "Episode:    720 | MA50:  -16.3 | Episode Reward:   13.0 | Steps:  3089 | Actions: [368. 440. 587. 848. 490. 356.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    730 | MA50:  -15.5 | Episode Reward:   20.0 | Steps:  2128 | Actions: [317. 286. 353. 533. 355. 284.]\n",
+      "Episode:    740 | MA50:  -15.3 | Episode Reward:   -7.0 | Steps:  4357 | Actions: [ 679.  570.  719. 1091.  629.  669.]\n",
+      "Episode:    750 | MA50:  -14.6 | Episode Reward:   10.0 | Steps:  3146 | Actions: [408. 516. 523. 813. 503. 383.]\n",
+      "Episode:    760 | MA50:  -14.0 | Episode Reward:   14.0 | Steps:  3152 | Actions: [447. 454. 547. 759. 387. 558.]\n",
+      "Episode:    770 | MA50:  -13.2 | Episode Reward:   16.0 | Steps:  2254 | Actions: [299. 325. 402. 446. 341. 441.]\n",
+      "Episode:    780 | MA50:  -12.5 | Episode Reward:   17.0 | Steps:  2564 | Actions: [286. 319. 555. 644. 346. 414.]\n",
+      "Episode:    790 | MA50:  -11.7 | Episode Reward:   16.0 | Steps:  2278 | Actions: [339. 272. 453. 421. 391. 402.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    800 | MA50:  -10.9 | Episode Reward:   20.0 | Steps:  2068 | Actions: [366. 253. 349. 567. 195. 338.]\n",
+      "Episode:    810 | MA50:  -10.2 | Episode Reward:   16.0 | Steps:  2293 | Actions: [332. 331. 454. 543. 268. 365.]\n",
+      "Episode:    820 | MA50:   -9.9 | Episode Reward:   -4.0 | Steps:  2643 | Actions: [357. 386. 703. 402. 342. 453.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    830 | MA50:   -9.1 | Episode Reward:   20.0 | Steps:  2068 | Actions: [278. 317. 428. 439. 198. 408.]\n",
+      "Episode:    840 | MA50:   -8.3 | Episode Reward:   18.0 | Steps:  2325 | Actions: [309. 408. 403. 458. 247. 500.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    850 | MA50:   -7.5 | Episode Reward:   20.0 | Steps:  2008 | Actions: [230. 311. 329. 443. 247. 448.]\n",
+      "Episode:    860 | MA50:   -6.7 | Episode Reward:   16.0 | Steps:  2249 | Actions: [309. 331. 303. 492. 345. 469.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    870 | MA50:   -5.9 | Episode Reward:   20.0 | Steps:  2096 | Actions: [281. 425. 248. 524. 210. 408.]\n",
+      "Episode:    880 | MA50:   -5.1 | Episode Reward:   18.0 | Steps:  2202 | Actions: [303. 403. 260. 566. 287. 383.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    890 | MA50:   -4.3 | Episode Reward:   20.0 | Steps:  2068 | Actions: [292. 363. 235. 599. 239. 340.]\n",
+      "Episode:    900 | MA50:   -3.7 | Episode Reward:    9.0 | Steps:  2787 | Actions: [388. 384. 478. 640. 441. 456.]\n",
+      "Episode:    910 | MA50:   -2.9 | Episode Reward:   19.0 | Steps:  2104 | Actions: [253. 310. 294. 523. 341. 383.]\n",
+      "Episode:    920 | MA50:   -2.2 | Episode Reward:   17.0 | Steps:  2254 | Actions: [256. 286. 276. 492. 345. 599.]\n",
+      "Episode:    930 | MA50:   -1.5 | Episode Reward:   16.0 | Steps:  2413 | Actions: [299. 312. 267. 521. 337. 677.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    940 | MA50:   -0.7 | Episode Reward:   20.0 | Steps:  2068 | Actions: [336. 240. 276. 474. 255. 487.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    950 | MA50:   +0.1 | Episode Reward:   20.0 | Steps:  2095 | Actions: [302. 300. 320. 473. 233. 467.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    960 | MA50:   +0.9 | Episode Reward:   20.0 | Steps:  2068 | Actions: [343. 294. 252. 442. 249. 488.]\n",
+      "Episode:    970 | MA50:   +1.6 | Episode Reward:   14.0 | Steps:  2476 | Actions: [376. 376. 300. 496. 402. 526.]\n",
+      "Episode:    980 | MA50:   +2.3 | Episode Reward:   17.0 | Steps:  2275 | Actions: [273. 412. 304. 415. 294. 577.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:    990 | MA50:   +3.1 | Episode Reward:   20.0 | Steps:  2068 | Actions: [294. 334. 266. 429. 243. 502.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1000 | MA50:   +3.9 | Episode Reward:   20.0 | Steps:  2068 | Actions: [323. 366. 226. 450. 249. 454.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1010 | MA50:   +4.7 | Episode Reward:   20.0 | Steps:  2068 | Actions: [362. 305. 242. 597. 283. 279.]\n",
+      "Episode:   1020 | MA50:   +5.3 | Episode Reward:   16.0 | Steps:  2239 | Actions: [322. 324. 355. 590. 344. 304.]\n",
+      "Episode:   1030 | MA50:   +6.1 | Episode Reward:   18.0 | Steps:  2160 | Actions: [408. 323. 363. 458. 228. 380.]\n",
+      "Episode:   1040 | MA50:   +6.8 | Episode Reward:   18.0 | Steps:  2215 | Actions: [387. 334. 346. 511. 205. 432.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1050 | MA50:   +7.5 | Episode Reward:   20.0 | Steps:  2068 | Actions: [385. 340. 315. 453. 176. 399.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1060 | MA50:   +8.3 | Episode Reward:   20.0 | Steps:  2068 | Actions: [346. 326. 285. 455. 206. 450.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1070 | MA50:   +9.1 | Episode Reward:   20.0 | Steps:  2068 | Actions: [221. 287. 272. 560. 194. 534.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1080 | MA50:   +9.8 | Episode Reward:   20.0 | Steps:  2068 | Actions: [260. 342. 231. 476. 238. 521.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1090 | MA50:  +10.5 | Episode Reward:   20.0 | Steps:  2128 | Actions: [332. 425. 269. 433. 285. 384.]\n",
+      "Episode:   1100 | MA50:  +11.2 | Episode Reward:   17.0 | Steps:  2181 | Actions: [420. 345. 344. 384. 263. 425.]\n",
+      "Episode:   1110 | MA50:  +11.7 | Episode Reward:   16.0 | Steps:  2252 | Actions: [414. 312. 279. 452. 281. 514.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1120 | MA50:  +12.5 | Episode Reward:   20.0 | Steps:  2068 | Actions: [377. 331. 224. 361. 274. 501.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1130 | MA50:  +13.0 | Episode Reward:   20.0 | Steps:  2068 | Actions: [277. 347. 246. 383. 282. 533.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1140 | MA50:  +13.6 | Episode Reward:   20.0 | Steps:  2096 | Actions: [348. 339. 288. 329. 285. 507.]\n",
+      "Episode:   1150 | MA50:  +14.0 | Episode Reward:   19.0 | Steps:  2044 | Actions: [376. 322. 289. 322. 256. 479.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1160 | MA50:  +14.6 | Episode Reward:   20.0 | Steps:  2068 | Actions: [368. 316. 342. 343. 168. 531.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1170 | MA50:  +15.1 | Episode Reward:   20.0 | Steps:  2008 | Actions: [371. 258. 327. 357. 205. 490.]\n",
+      "Episode:   1180 | MA50:  +15.7 | Episode Reward:   18.0 | Steps:  2366 | Actions: [371. 295. 410. 499. 230. 561.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1190 | MA50:  +16.5 | Episode Reward:   20.0 | Steps:  2096 | Actions: [328. 292. 330. 486. 179. 481.]\n",
+      "Episode:   1200 | MA50:  +16.7 | Episode Reward:    6.0 | Steps:  2982 | Actions: [474. 544. 651. 532. 298. 483.]\n",
+      "Episode:   1210 | MA50:  +16.8 | Episode Reward:   17.0 | Steps:  2318 | Actions: [401. 383. 452. 443. 200. 439.]\n",
+      "Episode:   1220 | MA50:  +16.9 | Episode Reward:   19.0 | Steps:  2314 | Actions: [435. 343. 352. 452. 243. 489.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1230 | MA50:  +16.9 | Episode Reward:   20.0 | Steps:  2068 | Actions: [320. 332. 272. 534. 207. 403.]\n",
+      "Episode:   1240 | MA50:  +17.4 | Episode Reward:   19.0 | Steps:  2104 | Actions: [350. 305. 300. 448. 220. 481.]\n",
+      "Episode:   1250 | MA50:  +17.5 | Episode Reward:   15.0 | Steps:  2479 | Actions: [351. 455. 340. 486. 362. 485.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1260 | MA50:  +17.7 | Episode Reward:   20.0 | Steps:  2008 | Actions: [310. 361. 229. 394. 240. 474.]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode:   1270 | MA50:  +17.6 | Episode Reward:   15.0 | Steps:  2441 | Actions: [394. 375. 314. 505. 337. 516.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1280 | MA50:  +17.7 | Episode Reward:   20.0 | Steps:  2008 | Actions: [306. 299. 269. 426. 248. 460.]\n",
+      "Episode:   1290 | MA50:  +17.7 | Episode Reward:   18.0 | Steps:  2200 | Actions: [292. 352. 447. 420. 233. 456.]\n",
+      "Episode:   1300 | MA50:  +17.7 | Episode Reward:   18.0 | Steps:  2189 | Actions: [306. 294. 366. 418. 269. 536.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1310 | MA50:  +17.8 | Episode Reward:   20.0 | Steps:  2068 | Actions: [221. 338. 271. 564. 268. 406.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1320 | MA50:  +18.3 | Episode Reward:   20.0 | Steps:  2068 | Actions: [226. 351. 294. 479. 259. 459.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1330 | MA50:  +18.3 | Episode Reward:   20.0 | Steps:  2068 | Actions: [315. 276. 271. 526. 272. 408.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1340 | MA50:  +18.3 | Episode Reward:   20.0 | Steps:  2128 | Actions: [269. 328. 259. 523. 248. 501.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1350 | MA50:  +18.3 | Episode Reward:   20.0 | Steps:  2096 | Actions: [220. 333. 346. 438. 233. 526.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1360 | MA50:  +18.4 | Episode Reward:   20.0 | Steps:  2162 | Actions: [296. 366. 243. 409. 241. 607.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1370 | MA50:  +18.4 | Episode Reward:   20.0 | Steps:  2036 | Actions: [361. 310. 250. 362. 288. 465.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1380 | MA50:  +18.4 | Episode Reward:   20.0 | Steps:  2128 | Actions: [376. 412. 215. 452. 233. 440.]\n",
+      "Episode:   1390 | MA50:  +18.2 | Episode Reward:    7.0 | Steps:  2869 | Actions: [330. 528. 377. 533. 375. 726.]\n",
+      "Episode:   1400 | MA50:  +18.3 | Episode Reward:   16.0 | Steps:  2272 | Actions: [368. 360. 394. 417. 299. 434.]\n",
+      "Episode:   1410 | MA50:  +18.3 | Episode Reward:   19.0 | Steps:  2044 | Actions: [325. 320. 392. 356. 202. 449.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1420 | MA50:  +18.4 | Episode Reward:   20.0 | Steps:  2093 | Actions: [336. 351. 357. 321. 228. 500.]\n",
+      "Episode:   1430 | MA50:  +18.4 | Episode Reward:   19.0 | Steps:  2065 | Actions: [331. 359. 311. 439. 243. 382.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1440 | MA50:  +18.4 | Episode Reward:   20.0 | Steps:  2068 | Actions: [324. 348. 314. 377. 254. 451.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1450 | MA50:  +18.4 | Episode Reward:   20.0 | Steps:  2142 | Actions: [286. 325. 348. 473. 253. 457.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1460 | MA50:  +18.4 | Episode Reward:   20.0 | Steps:  2068 | Actions: [274. 290. 308. 447. 290. 459.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1470 | MA50:  +18.5 | Episode Reward:   20.0 | Steps:  2087 | Actions: [320. 315. 322. 468. 255. 407.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1480 | MA50:  +18.6 | Episode Reward:   20.0 | Steps:  2068 | Actions: [280. 306. 352. 425. 231. 474.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1490 | MA50:  +18.6 | Episode Reward:   20.0 | Steps:  2068 | Actions: [220. 285. 349. 542. 264. 408.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1500 | MA50:  +18.6 | Episode Reward:   20.0 | Steps:  2096 | Actions: [234. 313. 301. 505. 283. 460.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1510 | MA50:  +18.6 | Episode Reward:   20.0 | Steps:  2068 | Actions: [232. 274. 310. 454. 338. 460.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1520 | MA50:  +18.7 | Episode Reward:   20.0 | Steps:  2128 | Actions: [329. 269. 263. 509. 301. 457.]\n",
+      "Episode:   1530 | MA50:  +18.7 | Episode Reward:   18.0 | Steps:  2316 | Actions: [323. 317. 296. 456. 347. 577.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1540 | MA50:  +18.7 | Episode Reward:   20.0 | Steps:  2008 | Actions: [261. 307. 259. 480. 277. 424.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1550 | MA50:  +18.7 | Episode Reward:   20.0 | Steps:  2068 | Actions: [324. 354. 312. 354. 204. 520.]\n",
+      "Episode:   1560 | MA50:  +18.7 | Episode Reward:   19.0 | Steps:  2329 | Actions: [388. 344. 356. 473. 248. 520.]\n",
+      "Episode:   1570 | MA50:  +18.7 | Episode Reward:   19.0 | Steps:  2226 | Actions: [329. 276. 334. 427. 330. 530.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1580 | MA50:  +18.7 | Episode Reward:   20.0 | Steps:  2167 | Actions: [301. 307. 340. 464. 291. 464.]\n",
+      "Episode:   1590 | MA50:  +18.7 | Episode Reward:   19.0 | Steps:  2225 | Actions: [343. 363. 332. 458. 231. 498.]\n",
+      "Episode:   1600 | MA50:  +18.7 | Episode Reward:   18.0 | Steps:  2168 | Actions: [326. 330. 354. 395. 279. 484.]\n",
+      "Episode:   1610 | MA50:  +18.7 | Episode Reward:   18.0 | Steps:  2162 | Actions: [336. 346. 373. 368. 308. 431.]\n",
+      "Saving model to Pong/, best episode score: 20.0\n",
+      "Episode:   1620 | MA50:  +18.7 | Episode Reward:   20.0 | Steps:  2068 | Actions: [260. 256. 343. 352. 282. 575.]\n",
+      "Saving model to Pong/, best episode score: 21.0\n",
+      "Episode:   1630 | MA50:  +18.7 | Episode Reward:   21.0 | Steps:  2098 | Actions: [299. 335. 287. 355. 287. 535.]\n",
+      "Episode:   1640 | MA50:  +18.7 | Episode Reward:   20.0 | Steps:  2096 | Actions: [326. 314. 337. 408. 266. 445.]\n",
+      "Episode:   1650 | MA50:  +18.8 | Episode Reward:   20.0 | Steps:  2151 | Actions: [348. 328. 337. 413. 244. 481.]\n",
+      "Saving model to Pong/, best episode score: 21.0\n",
+      "Episode:   1660 | MA50:  +18.8 | Episode Reward:   21.0 | Steps:  2130 | Actions: [323. 305. 283. 474. 255. 490.]\n",
+      "Episode:   1670 | MA50:  +18.6 | Episode Reward:   11.0 | Steps:  2439 | Actions: [357. 332. 319. 553. 326. 552.]\n",
+      "Episode:   1680 | MA50:  +18.6 | Episode Reward:   20.0 | Steps:  2068 | Actions: [393. 331. 261. 409. 273. 401.]\n",
+      "Episode:   1690 | MA50:  +18.5 | Episode Reward:   13.0 | Steps:  2754 | Actions: [565. 406. 368. 501. 330. 584.]\n",
+      "Episode:   1700 | MA50:  +18.8 | Episode Reward:   19.0 | Steps:  2350 | Actions: [441. 319. 307. 566. 298. 419.]\n",
+      "Episode:   1710 | MA50:  +18.7 | Episode Reward:   16.0 | Steps:  2337 | Actions: [431. 271. 361. 464. 343. 467.]\n",
+      "Episode:   1720 | MA50:  +18.8 | Episode Reward:   20.0 | Steps:  2254 | Actions: [360. 285. 282. 406. 343. 578.]\n",
+      "Episode:   1730 | MA50:  +18.8 | Episode Reward:   20.0 | Steps:  2144 | Actions: [369. 344. 269. 375. 265. 522.]\n",
+      "Episode:   1740 | MA50:  +18.7 | Episode Reward:   18.0 | Steps:  2487 | Actions: [399. 333. 295. 468. 399. 593.]\n",
+      "Episode:   1750 | MA50:  +18.8 | Episode Reward:   19.0 | Steps:  2194 | Actions: [278. 418. 309. 351. 310. 528.]\n",
+      "Saving model to Pong/, best episode score: 21.0\n",
+      "Episode:   1760 | MA50:  +18.8 | Episode Reward:   21.0 | Steps:  2098 | Actions: [333. 407. 278. 364. 272. 444.]\n",
+      "Saving model to Pong/, best episode score: 21.0\n",
+      "Episode:   1770 | MA50:  +19.0 | Episode Reward:   21.0 | Steps:  2098 | Actions: [346. 346. 280. 362. 291. 473.]\n",
+      "Episode:   1780 | MA50:  +18.9 | Episode Reward:   19.0 | Steps:  2501 | Actions: [413. 351. 424. 407. 331. 575.]\n",
+      "Episode:   1790 | MA50:  +19.0 | Episode Reward:   20.0 | Steps:  2128 | Actions: [370. 306. 234. 450. 357. 411.]\n",
+      "Episode:   1800 | MA50:  +19.0 | Episode Reward:   20.0 | Steps:  2151 | Actions: [355. 325. 253. 453. 364. 401.]\n",
+      "Episode:   1810 | MA50:  +19.0 | Episode Reward:   20.0 | Steps:  2068 | Actions: [359. 262. 241. 521. 337. 348.]\n",
+      "Episode:   1820 | MA50:  +19.0 | Episode Reward:   20.0 | Steps:  1991 | Actions: [313. 273. 299. 463. 344. 299.]\n",
+      "Saving model to Pong/, best episode score: 21.0\n",
+      "Episode:   1830 | MA50:  +19.0 | Episode Reward:   21.0 | Steps:  2098 | Actions: [339. 280. 313. 517. 336. 313.]\n"
      ]
     }
    ],
