--- a/A3C-Pong.ipynb
+++ b/A3C-Pong.ipynb
@@ -2,6 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =======================================================================================================\n",
+    "# Code was runned using Docker on top of Ubuntu 22.04.1 LTS with Nvidia drivers 510. \n",
+    "# Image: tensorflow/tensorflow:latest-gpu-jupyter\n",
+    "# CUDA version: 11.6 \n",
+    "# =======================================================================================================\n",
+    "# Run with: \n",
+    "#        docker pull tensorflow/tensorflow:latest-gpu-jupyter\n",
+    "#        docker run --rm -it --gpus 0 --name=pong_tensorflow -p8888:8888 tensorflow/tensorflow:latest-gpu-jupyter\n",
+    "# =======================================================================================================\n",
+    "# In another shell:\n",
+    "#        docker cp A3C-Pong.ipynb pong_tensorflow:/tf/\n",
+    "# Accessing from browser, uncomment the code below to install all the proper software. \n",
+    "# Re-comment it as soon as it finishes.\n",
+    "# =======================================================================================================\n",
+    "# Access output file with another shell:\n",
+    "#        docker exec -it pong_tensorflow bash\n",
+    "#        # tail -f Pong/output.txt\n",
+    "# ======================================================================================================="
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -844,9 +870,6 @@
     "    \n",
     "    # =======================================================================================================\n",
     "    # Play the game with global model and record data\n",
-    "    ################################################################\n",
-    "    # GNWRAPPER 1.3.2 IS CURRENTLY BUGGED. DON'T USE THIS FUNCTION # \n",
-    "    ################################################################\n",
     "    # =======================================================================================================\n",
     "    def global_model_play(self):\n",
     "        \n",
@@ -879,6 +902,9 @@
     "    \n",
     "    # =======================================================================================================\n",
     "    # Play the game according to the neural network and render it\n",
+    "    ################################################################\n",
+    "    # GNWRAPPER 1.3.2 IS CURRENTLY BUGGED. DON'T USE THIS FUNCTION # \n",
+    "    ################################################################\n",
     "    # =======================================================================================================\n",
     "    def play(self):\n",
     "        env   = gnwrapper.Animation(self.env)\n",
@@ -897,7 +923,7 @@
     "            action               = self.available_actions[action_index]\n",
     "            \n",
     "            state, _, done, _, _ = env.step(action)\n",
-    "            env.render(mode='rgb_array')\n",
+    "            env.render()\n",
     "    # =======================================================================================================\n",
     "    \n",
     "    \n",
@@ -1033,10 +1059,10 @@
     "    normalize            = True,\n",
     "    # Crop image to specified values\n",
     "    crop                 = True,      # value function needs something to distinguish states -> scores\n",
-    "    x_low                = 0,          # default = 0\n",
-    "    x_high               = 160,        # default = 160\n",
-    "    y_low                = 34,         # default = 0\n",
-    "    y_high               = 194,        # default = 210\n",
+    "    x_low                = 0,         # default = 0\n",
+    "    x_high               = 160,       # default = 160\n",
+    "    y_low                = 34,        # default = 0\n",
+    "    y_high               = 194,       # default = 210\n",
     "    # Resize screen to specified value\n",
     "    resize               = True,\n",
     "    screen_size          = 84,\n",
