adapted show_screen to new gym interface, changed args to the make_env function, increased difficulty, started new training

--- a/A3C-Pong.ipynb
+++ b/A3C-Pong.ipynb
@@ -170,7 +170,8 @@
     "# =======================================================================================================\n",
     "def make_env(kwargs):\n",
     "    \n",
-    "    env = gym.make(env_name, render_mode=\"rgb_array\", frameskip=4, repeat_action_probability=0.0, difficulty=0)\n",
+    "    env = gym.make(env_name, render_mode=kwargs[\"render_mode\"], frameskip=kwargs[\"frameskip\"], \n",
+    "             repeat_action_probability=kwargs[\"repeat_probability\"], difficulty=kwargs[\"difficulty\"])\n",
     "    env = AutoResetWrapper(env)\n",
     "    \n",
     "    if kwargs[\"crop\"]:\n",
@@ -830,8 +831,8 @@
     "        real_obs        = real_env.reset()\n",
     "\n",
     "        for _ in range(120):\n",
-    "            obs, _, _, _      = self.env.step(0)\n",
-    "            real_obs, _, _, _ = real_env.step(0)\n",
+    "            obs, _, _, _, _      = self.env.step(0)\n",
+    "            real_obs, _, _, _, _ = real_env.step(0)\n",
     "\n",
     "        plt.figure()\n",
     "        plt.title('Real Image')\n",
@@ -1024,14 +1025,20 @@
     "    moving_average_card  = 50,\n",
     "    # Number of threads\n",
     "    number_of_workers    = 16,\n",
-    "    # Set seed of the game to make sure every Worker works on analogous environments\n",
-    "    seed                 = 420,\n",
+    "# =======================================================================================================\n",
+    "    # Render mode for environment [rgb_array/human]. Don't edit.\n",
+    "    render_mode          = \"rgb_array\", \n",
+    "    # Number of frames to be skipped, repeating the action selected\n",
+    "    frameskip            = 4, \n",
+    "    # Probability of repeating the previous action\n",
+    "    repeat_probability   = 0.0, \n",
+    "    # Difficulty of the game [check: https://www.gymlibrary.dev/environments/atari/complete_list/]\n",
+    "    difficulty           = 1\n",
     "# =======================================================================================================\n",
     "    # Learning Rate\n",
     "    lr_schedule          = 5e-4,\n",
     "    # Global Clipnorm\n",
     "    global_clipnorm      = 1,\n",
-    "\n",
     "# =======================================================================================================\n",
     "    # Max length for training\n",
     "    max_eps              = max_eps,\n",
